[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "RL project with exact conda environment dependencies"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.11"

# Core RL packages
ale-py = "0.8.1"
autorom = "0.4.2"
autorom-accept-rom-license = "0.6.1"
gymnasium = "0.28.1"
shimmy = "0.2.1"
pygame = "2.1.3"

# PyTorch ecosystem (macOS MPS version)
torch = "2.5.1"

# Scientific computing
numpy = "1.26.4"
scipy = "1.15.1"
pandas = "2.2.3"


# Visualization
matplotlib = "3.10.0"

matplotlib-inline = "0.1.7"

tqdm = "4.67.1"


# Date/Time
python-dateutil = "2.9.0.post0"
pytz = "2024.1"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
vision = ["torchvision"]
